# simple-raymarching-arcade-game

./: .gitignore  Cargo.toml  build.rs  index.html  linux.code-workspace  readme.md  wasm.code-workspace
src/: engine.rs  game.rs  input.rs  lib.rs  lib.sync-conflict-20250222-214745-5PZQ4N6.rs  main.rs  renderer.rs  time.rs  wgsl_utils.rs
src/common/: camera.rs
src/game/: camera.rs
src/shaders/: shader.wgsl
src/shaders/shadersource/: main_scene.wgsl  scene_geometry.wgsl
src/shaders/shadersource/common/: camera_uniforms.wgsl  constants.wgsl  engine_uniforms.wgsl  game_uniforms.wgsl  obstacle_uniforms.wgsl
