[package]
name = "rust_arcade_game"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "22.1.0"
log = "0.4.22"
env_logger = "0.11.6"
pollster = "0.3"
cgmath = "0.18.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
once_cell = "1.20"
futures = "0.3"

[build-dependencies]

[lib]
name = "rust_arcade_game_lib"
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24.0", features = ["webgl"]}
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Performance",
]}


[profile.dev]
debug = true
[profile.release]
debug = true

